# SnapKit

./: .gitignore  README.md  pyproject.toml
src/snapkit/: __init__.py  cli.py  db.py  exporter.py  launcher.py  models.py  scanner.py
src/snapkit/app/: service.py
src/snapkit/app/usecases/: list_apps.py  open_item.py  scan_apps.py
src/snapkit/core/: entities.py  protocols.py
src/snapkit/gui/: icons.py  main_window.py  styles.py
src/snapkit/infra/cache/: icon_cache.py
src/snapkit/infra/db/: repo_sqlalchemy.py
src/snapkit/interfaces/cli/: main.py
src/snapkit/interfaces/gui_qml/: main.py
src/snapkit/interfaces/gui_qml/models/: app_list_model.py
src/snapkit/interfaces/gui_qml/qml/: Main.qml
src/snapkit/interfaces/gui_qml/qml/components/: AppCard.qml  AppRow.qml
src/snapkit/interfaces/gui_qml/viewmodels/: app_list_vm.py
temp/: test_api.py
tests/: conftest.py  test_cli.py  test_exporter.py  test_launcher.py  test_models.py  test_scanner.py
