[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "snapkit"
version = "0.1.0"
description = "Windows personal toolbox / launcher"
requires-python = ">=3.10"
dependencies = [
    "sqlalchemy>=2.0",
    "typer>=0.9",
    "rich>=13.0",
]

[project.optional-dependencies]
gui = ["PySide6>=6.5"]
dev = ["pytest>=7.0", "pytest-cov"]

[project.scripts]
snapkit = "snapkit.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/snapkit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
